force-app/main/default/objects/IP_Recipient__c/IP_Recipient__c.object-meta.xml
<CustomObject>
    <description>[Technology Transfer Starter] The distribution from a financial transaction.</description>
    <label>Recipient</label>
    <nameField>
        <displayFormat>RID{00000}</displayFormat>
        <label>Recipient ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recipients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>