force-app/main/default/objects/IP_Recipient__c/fields/IP_Recipient_Account__c.field-meta.xml
<CustomField>
    <fullName>IP_Recipient_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Distributions</relationshipLabel>
    <relationshipName>Recipients</relationshipName>
    <type>Lookup</type>
</CustomField>