force-app/main/default/objects/IP_Recipient__c/fields/IP_Recipient_Comments__c.field-meta.xml
<CustomField>
    <fullName>IP_Recipient_Comments__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>