force-app/main/default/objects/IP_Recipient__c/fields/IP_Recipient_Payment_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>IP_Recipient_Payment_Date_Time__c</fullName>
    <label>Payment Date/Time</label>
    <type>DateTime</type>
</CustomField>