force-app/main/default/objects/IP_Recipient__c/fields/IP_Transaction__c.field-meta.xml
<CustomField>
    <fullName>IP_Transaction__c</fullName>
    <label>Transaction</label>
    <referenceTo>IP_Transaction__c</referenceTo>
    <relationshipLabel>Recipients</relationshipLabel>
    <relationshipName>Recipients</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>